<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conociendo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/ubicando" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Boton1" />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Boton2" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/navegando" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:height="48dp"
        android:layout_marginStart="150dp"
        android:text="@string/link" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Boton3" />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Boton4" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle_green">

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rectangle"
            android:columnCount="2"
            android:rowCount="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center_horizontal"
                android:layout_row="0"
                android:text="@string/contactando"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_marginStart="60dp"
                android:text="@string/Boton5" />
            <LinearLayout
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Boton6" />
                <TextView
                    android:id="@+id/textView"
                    android:background="@drawable/rectangle_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contacto_seleccionado"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/marcarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="center_horizontal"
                android:text="@string/marcar" />

            <Button
                android:id="@+id/sendSMSButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:layout_marginStart="40dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_sms" />

            <Button
                android:id="@+id/sendEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_email" />

        </GridLayout>

        <Button
            android:id="@+id/galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/grid"
            android:layout_centerHorizontal="true"
            android:text="@string/galeria" />

        <Button
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galeria"
            android:layout_centerHorizontal="true"
            android:text="@string/camera" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_below="@id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/sample" />

    </RelativeLayout>

</LinearLayout>